Removed Overflow issues vertically

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 html,body {
   height:100%; 
   background:#f9f9f9;
-  overflow-x:hidden; 
+ 
 }
 
 .first {
